<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/Time_Catcher"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:onClick="btnOnClickBerechnungZeitpunkt"
        android:text="@string/btn_Ber_Zeitpunkt" />

    <Button
        android:id="@+id/button5"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:onClick="btnOnClickBerechnungZeitraum"
        android:text="@string/btn_Ber_Zeitraum" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/cGold" />
</LinearLayout>
