<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cWeiss"
    android:gravity="center|center_horizontal|left|top"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/btn_Ber_Zeitraum"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/cSchwarz" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </TableRow>

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </TableRow>
    </TableLayout>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="btnBerechne"
            android:text="@string/Berechne" />
    </TableRow>

    <TableLayout
        android:id="@+id/tlEndzeitpunkt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cHellorange" >

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvEnduhrzeitTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/TagEnglisch"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/cSchwarz" />

            <TextView
                android:id="@+id/tvEnduhrzeitStd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/StundeEnglisch"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/cSchwarz" />

            <TextView
                android:id="@+id/tvEnduhrzeitMin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/MinuteEnglisch"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/cSchwarz" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Anfangszeitpunkt"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/cSchwarz" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Plus_Zeitraum"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/cSchwarz" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/et_1_01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/Stunde"
                android:inputType="numberDecimal"
                android:nextFocusDown="@+id/et_1_02" />
            
            <requestFocus />

            <EditText
                android:id="@+id/et_1_02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/Minute"
                android:inputType="numberDecimal"
                android:nextFocusDown="@+id/et_1_03" />

            <EditText
                android:id="@+id/et_1_03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/Stunde"
                android:inputType="numberDecimal"
                android:nextFocusDown="@+id/et_1_04" />

            <EditText
                android:id="@+id/et_1_04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/Minute"
                android:inputType="numberDecimal"
                android:nextFocusDown="@+id/et_1_01" />
        </TableRow>
    </TableLayout>

</LinearLayout>